# petdetective

./: CMakeLists.txt  definitions.h  main.cpp  main.go  pet.cpp  pet.h  readlines.cpp  readlines.h  state.cpp  state.h  task.go  task15.txt  task15_2.txt  task16.txt  task16_2.txt  task17.txt  task18.txt  task18_2.txt  task19.txt  task21.txt  task24.txt  task25.txt  task26.txt  task27.txt  task27_2.txt  task27_3.txt  task27_4.txt  task29.txt  task30.txt  task31.txt  task31_2.txt  task31_3.txt  task33.txt
astar/: astar.go
